--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,19 +7,25 @@ spring.h2.console.enabled=true
 # ===============================
 # DB
 # ===============================
+# spring.datasource.url=jdbc:h2:mem:filme
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.datasource.password=
 
-spring.datasource.url=jdbc:h2:mem:filme
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_filme?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=kunst
+spring.datasource.password=kunst
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 
-spring.jpa.show-sql=true
+# spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 
 spring.thymeleaf.cache=false
